@@ -186,6 +186,8 @@ int FIPS_selftest(void)
 		rv = 0;
 	if (!FIPS_selftest_dsa())
 		rv = 0;
+	if (!FIPS_selftest_ecdh())
+		rv = 0;
 	fips_post_end();
 	return rv;
 	}
